--- a/reis naar mars/CSS/menu.css
+++ b/reis naar mars/CSS/menu.css
@@ -6,60 +6,130 @@ body {
 .dropdown {
     position: relative;
     display: inline-block;
+    font-size: large;
+    margin-right: 100px;
+    margin-left: 100px;
+    margin-bottom: 100px;
+    font-family: Courier, monospace;
 }
-
+ 
 .dropdown-menu {
     display: none;
     position: absolute;
     background-color: aliceblue;
     min-width: 160px;
-    justify-content: space-between;
-
-  
 }
-
+ 
 .dropdown-menu a {
     padding: 8px 12px;
     display: block;
 }
-
+ 
 .dropdown:hover .dropdown-menu {
     display: block;
 }
-
+ 
 .navbar {
-    position: fixed;
+    position: absolute;
     top: 0;
     width: 100%;
     height: 50px;
     background-color: antiquewhite;
-    z-index: 2;
 }
-
+ 
 .nav-links {
     text-align: center;
     padding: 15px 0;
+    font-size: large;
+    font-family: Courier, monospace;
 }
-
+ 
 .nav-links li {
     display: inline-block;
     margin: 0 20px;
 }
-
+ 
 .nav-links a {
     color: blueviolet;
     text-decoration: none;
-    padding: 12px 20px; 
-    font-size: 18px;   
 }
-
+ 
 .nav-links a:hover {
     color: #000;
-    background-color: lightgray; 
 }
+
 .tekst{
     position: relative;
     text-align: center;
     top: 35px;
 }
 
+.image-container {
+    position: relative;
+    display: inline-block;
+}
+
+.hidden-text {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    width: 100%;
+    text-align: center;
+}
+
+.image-container:hover .hidden-text {
+    display: block;
+}
+.image-container {
+    position: relative;
+    display: inline-block;
+    margin: 20px; /* Voeg ruimte toe tussen de plaatjes */
+    text-align: center; /* Centreer de plaatjes */
+}
+
+.hidden-text {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    width: 100%;
+    text-align: center;
+}
+
+.image-container:hover .hidden-text {
+    display: block;
+}
+
+.voorgerecht, .hoofdgerecht {
+    text-align: center; /* Centreer de container */
+}
+.image-container:hover .hidden-text {
+    display: block;
+}
+.image-container {
+    position: relative;
+    display: inline-block;
+    margin: 20px; /* Voeg ruimte toe tussen de plaatjes */
+    text-align: center; /* Centreer de plaatjes */
+}
+
+.hidden-text {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    width: 100%;
+    text-align: center;
+}
+
+.image-container:hover .hidden-text {
+    display: block;
+}
+
+.voorgerecht, .hoofdgerecht, .toetjes {
+    text-align: center; /* Centreer de container */
+}
