--- a/reis naar mars/CSS/wellness_fitness.css
+++ b/reis naar mars/CSS/wellness_fitness.css
@@ -1,5 +1,6 @@
 body {
     background-image: linear-gradient(to right, black, orange, black);
+    color: white;
 }
  
 .dropdown {
@@ -56,3 +57,18 @@ body {
 .nav-links a:hover {
     color: #000;
 }
+.parent {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    text-align: center;
+    position: relative;
+    top: 65px;
+    }
+    
+    .div1 { grid-area: 1 / 1 / 3 / 3; }
+    .div2 { grid-area: 1 / 3 / 3 / 5; }
+    .div3 { grid-area: 3 / 1 / 5 / 3; }
+    .div4 { grid-area: 3 / 3 / 5 / 5; }
