--- a/Mission2mars/CSS/bibliotheek.css
+++ b/Mission2mars/CSS/bibliotheek.css
@@ -1,8 +1,11 @@
 body {
-    background-image: linear-gradient(to right, black, orange, black);
-    color: white;
+    background-image: linear-gradient(to top, black, orange, black);
+    margin: 0;
+    padding: 0;
+    display: flex;
+    min-height: 100vh;
 }
- 
+
 .dropdown {
     position: relative;
     display: inline-block;
@@ -35,7 +38,7 @@ body {
     width: 100%;
     height: 50px;
     background-color: antiquewhite;
-    z-index:  2;
+    z-index: 1;
 }
  
 .nav-links {
@@ -58,18 +61,23 @@ body {
 .nav-links a:hover {
     color: #000;
 }
-.parent {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    text-align: center;
+.rij1{
     position: relative;
-    top: 65px;
-    }
+    display: flex;
+    top: 90px;
+    left: 155px;
     
-    .div1 { grid-area: 1 / 1 / 3 / 3; }
-    .div2 { grid-area: 1 / 3 / 3 / 5; }
-    .div3 { grid-area: 3 / 1 / 5 / 3; }
-    .div4 { grid-area: 3 / 3 / 5 / 5; }
+
+}
+.rij2{
+    position: relative;
+    display: flex;
+    top: 90px;
+    left: 10%;
+}
+.rij3{
+    position: relative;
+    display: flex;
+    top: 590px;
+    left: -45%;
+}
