games pagina afgemaakt door het css te stylen

--- a/Mission2mars/CSS/games.css
+++ b/Mission2mars/CSS/games.css
@@ -76,3 +76,18 @@ body {
 .dropdown:hover .dropdown-menu {
     display: block;
 }
+
+.container {
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 17%;
+}
+
+h1 {
+    text-align: center;
+}
+
+.game-titel {
+    text-align: center;
+}
