--- a/Mission2mars/CSS/muziek.css
+++ b/Mission2mars/CSS/muziek.css
@@ -26,74 +26,60 @@ header .home-icon {
     font-size: 25px;
 }
 
-/* Navbar */
-.navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 50px;
-    background-color: #333333; /* Donkergrijze achtergrondkleur */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-}
-
-.nav-links {
-    list-style: none;
-    display: flex;
-    align-items: center;
-}
-
-.nav-links li {
-    margin: 0 20px;
-}
-
-.nav-links a {
-    color: blueviolet;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 10px 15px;
-    border-radius: 5px;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-.nav-links a:hover {
-    background-color: blueviolet;
-    color: #fff;
-}
-
-/* Dropdown menu */
 .dropdown {
     position: relative;
     display: inline-block;
+    font-size: large;
+    margin-right: 100px;
+    margin-left: 100px;
+    margin-bottom: 100px;
+    font-family: Courier, monospace;
 }
-
+ 
 .dropdown-menu {
     display: none;
     position: absolute;
     background-color: aliceblue;
     min-width: 160px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
 }
-
+ 
 .dropdown-menu a {
     padding: 8px 12px;
     display: block;
-    color: blueviolet;
-    text-decoration: none;
-    transition: background-color 0.3s, color 0.3s;
 }
-
-.dropdown-menu a:hover {
-    background-color: blueviolet;
-    color: #fff;
-}
-
+ 
 .dropdown:hover .dropdown-menu {
     display: block;
+}
+ 
+.navbar {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 50px;
+    background-color: antiquewhite;
+    z-index:  2;
+}
+ 
+.nav-links {
+    text-align: center;
+    padding: 15px 0;
+    font-size: large;
+    font-family: Courier, monospace;
+}
+ 
+.nav-links li {
+    display: inline-block;
+    margin: 0 20px;
+}
+ 
+.nav-links a {
+    color: blueviolet;
+    text-decoration: none;
+}
+ 
+.nav-links a:hover {
+    color: #000;
 }
 
 /* Footer met knoppen */
